# bridge

./: .gitignore  README.md  pyproject.toml
bridge/: __init__.py  array.py  augmentation.py  baselines.py  cli.py  config.py  data.py  embeddings.py  empath_controls.py  encoder.py  extraction.py  linear_baseline.py  model.py  pipeline.py  training.py  utils.py  validation.py
tests/: test_smoke.py
