[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge"
version = "0.1.0"
description = "BRIDGE: Behavioral Research Through Interpretable, Dimensionality-reduced Generative AI Embeddings"
readme = "README.md"
license = {text = "CC-BY-SA-4.0"}
authors = [
    {name = "Anirban Mukherjee"},
    {name = "Hannah H. Chang"},
    {name = "Sachin Gupta"},
]
keywords = [
    "embeddings",
    "nlp",
    "consumer-research",
    "pytorch",
    "contrastive-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "tqdm>=4.65",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
tuning = ["optuna>=3.0"]
augmentation = ["aiohttp>=3.9.0"]
baselines = ["sentence-transformers>=2.2"]
empath = ["empath>=0.89"]
viz = ["umap-learn>=0.5"]
all = [
    "openai>=1.0",
    "optuna>=3.0",
    "aiohttp>=3.9.0",
    "sentence-transformers>=2.2",
    "empath>=0.89",
    "umap-learn>=0.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
bridge = "bridge.cli:main"

[project.urls]
Repository = "https://github.com/dranirbanmukherjee/bridge"

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge*"]

[tool.setuptools.package-data]
bridge = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

# ---------------------------------------------------------------------------
# Pylint policy for the BRIDGE package.
# Run with:  pylint bridge --rcfile=pyproject.toml
# Philosophy: enforce correctness and documentation; do NOT enforce stylistic
# choices made deliberately elsewhere (line length is unenforced in Ruff via
# E501; the pipeline / training / augmentation routines are intentionally
# structured so each maps to an algorithm step in the paper).
# ---------------------------------------------------------------------------
[tool.pylint.main]
py-version = "3.14"

[tool.pylint."messages control"]
disable = [
    # Complexity metrics. BRIDGE's pipeline / training / augmentation routines
    # are intentionally monolithic so each function maps 1:1 to an algorithm
    # step in the paper; decomposing them would obscure that mapping.
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-instance-attributes",
    "too-many-return-statements",
    "too-many-nested-blocks",
    "too-many-public-methods",
    # Lazy imports are deliberate: optional heavy dependencies (umap, matplotlib,
    # sentence-transformers, empath, scipy.sparse) and circular-import avoidance
    # in the CLI. Importing them at module top would make the core import slow
    # or fail when an optional extra is not installed.
    "import-outside-toplevel",
    # Line length is unenforced project-wide (matches Ruff's `ignore = ["E501"]`).
    "line-too-long",
    # Duplicate-code detector flags intentionally parallel baseline blocks.
    "duplicate-code",
]

[tool.pylint.basic]
# Single-capital and SVD/linear-algebra names are mathematical convention, not
# style violations (design matrix X, targets Y, basis U/V/Vt, residual B, ...).
good-names = ["X", "Y", "B", "U", "V", "Vt", "_Vt", "S", "N", "T", "A", "W",
              "df", "fh", "ax", "lp", "i", "j", "k", "n", "p", "_"]

[tool.pylint.typecheck]
# torch / numpy expose C-extension members pylint cannot introspect, producing
# false "no-member" reports.
generated-members = ["torch.*", "numpy.*"]
